Completed the user and JWT routesl

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 API_URL= /api/v1
+secret= my-dog-is-elee
 CONNECTION_STRING = mongodb+srv://rajesh72sharma:sharma123@cluster0.k5gph.mongodb.net/eshop-db?retryWrites=true&w=majority
